--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -28,11 +28,8 @@ class: title, center, middle
 
 ---
 # Modern data stack
-<!--
-To-do: Update this SVG
--->
 
-<img src="/lessons/img/{{page.lesson}}/modern-data-stack-without-dbt.png" style="width: 100%;">
+<img src="/lessons/img/{{page.lesson}}/premodern-data-stack.svg" class="img-center">
 
 ???
 - MPP warehouses replaced the need for engineers to maintain warehouse infrastructures
