Add wifi password

--- a/_lessons/101.html
+++ b/_lessons/101.html
@@ -3,6 +3,11 @@ layout: presentation
 title: Who is an analytics engineer?
 lesson: 101
 ---
+class: subtitle, center
+# WiFi: CSLA
+# Password: CreateMore
+
+---
 
 class: title, center, middle
 # Who is an analytics engineer?
