Add img for PR too

--- a/_lessons/109.html
+++ b/_lessons/109.html
@@ -35,7 +35,20 @@ class: title, center, middle
 
 ---
 
-[include image of a good PR]
+.left-column-33[
+### Description
+<img src="/lessons/img/{{page.lesson}}/pr-1.png" style="width: 100%;" class="img-center">
+]
+.right-column-66[
+.left-column[
+### CI
+<img src="/lessons/img/{{page.lesson}}/pr-2.png" class="img-center">
+]
+.right-column[
+### Review
+<img src="/lessons/img/{{page.lesson}}/pr-3.png" class="img-center">
+]
+]
 
 ---
 
