--- a/_lessons/201.html
+++ b/_lessons/201.html
@@ -117,7 +117,8 @@ Also use sources when referring to raw data
 ```
 {% endraw %}
 
---
+---
+# Apply configurations at the group level
 
 🙆‍♀️
 ```yml
