--- a/_lessons/203.html
+++ b/_lessons/203.html
@@ -13,6 +13,10 @@ class: title, center, middle
 
 Packages are dbt projects that you can install in your _own dbt project_
 
+They have:
+* A `dbt_project.yml` file
+* And contain macros, models etc.
+
 
 ???
 Teacher notes:
@@ -24,6 +28,7 @@ And from there we can talk a little bit about writing custom tests + using custo
 # Use case: Using macros from a package
 
 1. Add a `packages.yml` file to your project
+
 --
 
 ```yml
