--- a/_lessons/105.html
+++ b/_lessons/105.html
@@ -1,230 +1,154 @@
 ---
 layout: presentation
-title: Testing & CI
-lesson: 105
+title: Sources
+lesson: 106
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
+
 class: title, center, middle
-# Testing & CI
+# Sources
+
 ---
 
-# Refresher:
+# If you've ever had this happen...
+
+- I'm switching my email marketing platform. I want to know which final models depend on that source data.
 --
 
-## 102: The Analytics Engineering Viewpoint
-_**Analytics code should have quality assurance**_
-* _Run automated tests on source data and on transformed data to ensure that SQL works as intended_
-* _Ensure source data is up to date_
+- I'm switching the tool that extracts and loads _from_ my email 
+marketing platform. The table names used to have underscores, now they don't!
+--
+
+- I'm switching from Redshift to Snowflake. All of my source data will be
+in a different database and schema.
+--
+
+- Nothing in this world is perfect. My data loading tools experience occasional
+hiccups that result in delayed or duplicated data.
+--
+
+- (!!) I want to stage & query an external table that points to files in S3.
 
 ---
-# Refresher
-## 103: dbt Fundamentals
-_**Tests** are assertions you make about your **models**._
 
-_When you execute the `test` **command** dbt iterates through the schema files (`models/**.yml`) to construct `select` queries._
+# Sources may be right for you!
 
-_These queries return `0` when your assertion is true, otherwise the test fails._
-???
-We've already touched on these concepts a couple of times.
+- Easily declare and update the location of raw tables
+    - `database` + `schema` for each source
+    - `name`/`identifier` for each table
+--
+- Test schema integrity of raw tables
+    - Built-in: `unique`, not_null`, `accepted_values`, `relationships`
+    - Custom: whatever you want!
+--
+- Test the freshness of loaded data, based on thresholds you define
+--
+
+- (!!) Declare `external` properties ([read more](https://github.com/fishtown-analytics/dbt-external-tables))
 
 ---
-# Examples:
-.left-column[
+
+# YML
+
+I define my sources in `stripe_source.yml`:
 ```yml
 version: 2
 
-models:
-  - name: customers
-    columns:
-      - name: customer_id
-        tests:
-          - not_null
-
-```
-]
---
-.right-column[
-```sql
-
-select
-  count(*)
-
-from analytics.customers
-where customer_id is null
-
+sources:
+  - name: stripe
+    tables:
+      - name: payment
 ```
 
-]
-???
-Teacher notes: talk about how these relate
 ---
-# Examples:
-.left-column[
+
+# Feeling fresh?
+
+Optionally, specify a `loaded_at_field` and `freshness`:
 ```yml
 version: 2
 
-models:
-  - name: customers
-    columns:
-      - name: customer_id
-        tests:
-          - not_null
-          - unique
-
+sources:
+  - name: stripe
+    loaded_at_field: _batched_at
+    loader: airflow     # this is just for documentation
+    
+    freshness:
+      warn_after: {count: 12, period: hour}
+      error_after: {count: 24, period: hour}
+    
+    tables:
+      - name: payment
 ```
+
+---
+
+# SQL
+
+And then I create a staging model, `stg_stripe_payment.sql`:
+
+{% raw %}
+```sql
+with source as (
+
+    select * from {{source('stripe', 'payment')}}
+
+),
+
+renamed as (
+
+...
+```
+{% endraw %}
+
+---
+
+# Sources are green...
+
+<img src="/lessons/img/{{page.lesson}}/dag-source.png" class="img-center">
+
+---
+
+.left-column-33[
+# And green is good!
 ]
---
-.right-column[
-```sql
 
-select count(*) from (
-  select
-    customer_id
-
-  from analytics.customers
-  group by customer_id
-  having count(*) > 1
-)
-
+.right-column-66[
+```bash
+dbt source snapshot-freshness
 ```
+<img src="/lessons/img/{{page.lesson}}/freshness-viz.png" style="width: 100%;" class="img-center">
 ]
 
 ---
 
-# dbt's built-in tests:
-* `unique`
-* `not_null`
-* `accepted_values`
-* `relationships`
+# In deployment
 
----
-# Q: Why might a test fail?
---
+A common approach: Test the schema integrity of raw tables _before_
+replacing production models.
 
-1. The SQL in your model doesn’t do what you intended.
-
---
-
-```sql
-select
-    customers.customer_id,
-    customer_orders.number_of_orders
-from customers
-
-left join customer_orders using (customer_id)
-
+```bash
+dbt test -m source:*            # ensure no duplicates or unexpected nulls
+dbt run                         # only runs if test above succeeds
+dbt test --exclude source:*
+dbt source snapshot-freshness   # powers freshness viz in dbt Cloud
 ```
 
-```yml
-version: 2
-
-models:
-  - name: customers
-    columns:
-      - name: number_of_orders
-        tests:
-          - not_null
-```
----
-# Q: Why might a test fail?
-
-1. The SQL in your model doesn’t do what you intended.
-
-```sql
-select
-    customers.customer_id,
-    coalesce(customer_orders.number_of_orders, 0) as number_of_orders
-from customers
-
-left join customer_orders using (customer_id)
-
-```
-
-```yml
-version: 2
-
-models:
-  - name: customers
-    columns:
-      - name: number_of_orders
-        tests:
-          - not_null
-```
+Of course, many deployments are _much_ more complex.
 
 ???
-Examples:
-* Bad deduping
-* Bad joins
+More complex deployments:
+- Blue/green that renames schema/database at last step (if all tests pass) or
+leaves old objects in place (if a test fails)
 
 ---
-# Q: Why might a test fail?
 
-1. The SQL in your model doesn’t do what you intended
---
-
-2. An assumption about your source data is wrong.
-
---
-    * non-unique IDs
-    * Missing data
-    * NULLs you weren't expecting
-
----
-# Q: Why might a test fail?
-
-1. The SQL in your model doesn’t do what you intended.
-2. An assumption about your source data is wrong.
-
---
-3. A previously-true assumption about your underlying source data is no longer true
---
-
-    * A previously unique key is no longer unique
-    * You have a new payment method
-
----
-# Q: What should you test?
---
-
-* Good rules of thumb:
-    * Test primary keys (`unique`, `not_null`)
-    * Test fields that you use in downstream models
-
----
-# Q: When should you run tests?
---
-
-* Manual: When you first run a project
-* Manual: During development
-* Automated: When you run dbt on a schedule
-* Automated: When you want to merge your code
-
---
-
-Wait, how do I automate running dbt?
----
-# Automating dbt runs
-## a.k.a. Running dbt in production
-You need to run dbt on a schedule to keep your data up to date.
-
-Your automated runs should:
-* Use the latest version of my project? → **continuous deployment**
-* Have monitoring and alerting if something goes wrong?
-* Have a way to debug failures?
-* Build & test your code every time you want to merge changes (or "deploy to production") →  **continuous integration**
-
-We use the scheduler in [dbt Cloud](cloud.getdbt.com) to run dbt in production.
----
-<img src="/lessons/img/{{page.lesson}}/dbt-cloud.png" style="width: 100%;">
-
-
----
 name: working-session
 class: subtitle
 
 # Working session
-* Ensure that your `orders` model has tests on it (and that they pass)
+* Add `sources` for our two data sources: `jaffle_shop` and `stripe`.
 
 {% include options/next-presentation.html %}
