--- a/_lessons/206.html
+++ b/_lessons/206.html
@@ -387,7 +387,7 @@ as an optional strategy for BigQuery
 
 ---
 
-# It's the modeling, silly
+# It's the modeling
 
 - Keep the inputs and transformations of your incremental models as
 singular, simple, and immutable as possible.
@@ -398,10 +398,3 @@ singular, simple, and immutable as possible.
 
 - Rethink! Incrementality introduces a level of complexity (for you and for
 the database) that is **necessarily a trade-off**.
-
----
-
-class: subtitle, middle, center
-### Made it :)
-
-{% include options/next-presentation.html %}
