--- a/lessons.html
+++ b/lessons.html
@@ -43,7 +43,7 @@ permalink: /lessons/
                             <a target="_blank" href="/lessons/103">103</a> dbt Fundamentals
                         </li>
 												<li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            Working session: Building a model
+                            Working session: Building models
                         </li>
                         <li>
                             <hr style="margin: 15px" />
@@ -66,16 +66,16 @@ permalink: /lessons/
                     <h4> Day Two: Applications </h4>
                     <ul class='list-icons text-med text-heading text-left'>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/201">201</a> DataOps with dbt
+                            <a target="_blank" href="/lessons/201">201</a> Version Control &amp; CI/CD
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
                             <a target="_blank" href="/lessons/202">202</a> Testing data
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/203">203</a> dbt best practices
+                            <a target="_blank" href="/lessons/203">203</a> Jinja &amp; macros
                         </li>
                         <li><span class='arrow-right text-blue text-medium list-icon'></span>
-                            <a target="_blank" href="/lessons/204">204</a> Using macros
+                            <a target="_blank" href="/lessons/204">204</a> Best practices
                         </li>
                         <li>
                             <hr style="margin: 15px" />
