--- a/_lessons/202.html
+++ b/_lessons/202.html
@@ -1,13 +1,13 @@
 ---
 layout: presentation
-title: Testing & CI
+title: Testing &amp; CI
 lesson: 105
 estimated_teaching_time: 30
 teaching_method: live demo + slides. Questions encouraged.
 working_session: true
 ---
 class: title, center, middle
-# Testing & CI
+# Testing &amp; CI
 ---
 
 # Refresher:
@@ -218,13 +218,3 @@ Your automated runs should:
 We use the scheduler in [dbt Cloud](cloud.getdbt.com) to run dbt in production.
 ---
 <img src="/lessons/img/{{page.lesson}}/dbt-cloud.png" style="width: 100%;">
-
-
----
-name: working-session
-class: subtitle
-
-# Working session
-* Ensure that your `orders` model has tests on it (and that they pass)
-
-{% include options/next-presentation.html %}
